Fix spacing between Agenda sections.

--- a/assets/scss/layout/_agenda.scss
+++ b/assets/scss/layout/_agenda.scss
@@ -91,7 +91,7 @@
         align-items: flex-start;
         justify-content: space-between;
         padding: 17px 0;
-        box-shadow: 0 0.5px 0 0 rgba(0, 0, 0, .3);
+        border-bottom: 0.1px solid rgba(0, 0, 0, 0.2);
         font-family: $p200;
         color: #4d4d4d;
 
@@ -234,6 +234,8 @@
     }
 
     .agenda-table {
+        margin-bottom: 25vh;
+
         .tr-toggle {
             display: block;
         }
